--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   font-family: Arial;
-  border: border-box;
+  box-sizing: border-box;
 }
 
 .navbar {
@@ -132,4 +132,59 @@ span {
 .panel-deals {
   font-size: 0.9rem;
   font-weight: 700;
+}
+/***********hero-sections **************/
+
+.hero-section {
+  background-image: url("hero_image.jpg");
+  background-size: cover;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.hero-message {
+  background-color: white;
+  color: black;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.85rem;
+  width: 80%;
+  margin-bottom: 25px;
+}
+.hero-message a {
+  color: #007185;
+}
+
+/***********shop-section**********/
+.shop-section {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #e2e6e7;
+}
+.box {
+  /* border: 2px solid black; */
+  height: 400px;
+  width: 23%;
+  background-color: white;
+  padding: 20px 0px 15px;
+  margin-top: 15px;
+}
+
+.box-image {
+  height: 300px;
+  background-size: cover;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.box-content {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.box-content p {
+  color: #007185;
 }
