--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ span {
 /***********shop-section**********/
 .shop-section {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   background-color: #e2e6e7;
 }
@@ -187,4 +188,70 @@ span {
 
 .box-content p {
   color: #007185;
+}
+
+/*******footer************/
+
+footer {
+  margin-top: 15px;
+}
+.foot-panel1 {
+  background-color: #37475a;
+  color: white;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.85rem;
+}
+
+.foot-panel2 {
+  display: flex;
+  background-color: #222f3d;
+  color: white;
+  height: 400px;
+  justify-content: space-evenly;
+}
+
+ul {
+  margin-top: 20px;
+}
+ul a {
+  display: block;
+  font-size: 0.85rem;
+  margin-top: 10px;
+  color: #dddddd;
+}
+
+.foot-panel3 {
+  background-color: #222f3d;
+  border-top: 0.5px solid white;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  background-image: url(amazon_logo.png);
+  height: 50px;
+  width: 100px;
+  background-size: cover;
+}
+
+.foot-panel4 {
+  background-color: #0f1111;
+  color: white;
+  height: 80px;
+  font-size: 0.7rem;
+  text-align: center;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+}
+.pages {
+  padding: 25px;
+}
+.copyright {
+  padding-top: 5px;
 }
